# googleserp

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test_googleserp.py
src/googleserp/: __init__.py  google.py
