[tool.poetry]
authors = ["07h <noreply@microsoft.com>"]
description = "GoogleSERP is a Python library for executing intelligent, realistic-looking, and tunable Google searches"
name = "GoogleSERP"
version = "0.1.0"

[tool.poetry.dependencies]
httpx = {version = ">=0.24.1", extras = ["socks"]}
selectolax = "^0.3.26"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
authors = [{name = "07h", email = "noreply@microsoft.com"}]
classifiers = ["Programming Language :: Python"]
dependencies = ["beautifulsoup4>=4.9.3", "httpx>=0.24.1", "httpx[socks]"]
description = "An Async Python library for executing intelligent, realistic-looking, and tunable Google searches."
dynamic = ["version"]
keywords = ["python", "google", "search", "googlesearch"]
license = {file = "LICENSE"}
name = "googleserp"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.6"

[project.urls]
Documentation = "https://github.com/07h/googleserp"
Homepage = "https://github.com/07h/googleserp"
Repository = "https://github.com/07h/googleserp"

[tool.setuptools.dynamic]
version = {attr = "googleserp.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
